--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,13 +30,28 @@ jobs:
 
     - name: Build the app
       run: npm run build
-
-    - name: Deploy to Server
-      uses: appleboy/ssh-action@master # 使用一个现成的 SSH Action
+    # 新增步骤：在服务器上创建目录（如果不存在）
+    - name: Create directory on server
+      uses: appleboy/ssh-action@master
       with:
-        host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USERNAME }}
-        key: ${{ secrets.SERVER_SSH_KEY }}
+        host: ${{ secrets.SSH_HOST }}
+        username: ${{ secrets.SSH_USERNAME }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        script: |
+          mkdir -p /var/www/my-cicd-app
+          # 这里也可以加上设置权限的命令，例如：
+          # chown -R nginx:nginx /var/www/my-cicd-app
+
+          
+    - name: Deploy with rsync
+      uses: burnett01/rsync-deployments@5.2
+      with:
+        switches: -avzr --delete
+        path: ./build/ # 确认你的构建产物在 build 目录下
+        remote_path: /var/www/my-cicd-app/ # 服务器上的目标目录
+        remote_host: ${{ secrets.SSH_HOST }}
+        remote_user: ${{ secrets.SSH_USERNAME }}
+        remote_key: ${{ secrets.SSH_PRIVATE_KEY }}
         
         # 这里是在服务器上执行的命令
         script: |
@@ -55,7 +70,7 @@ jobs:
       uses: burnett01/rsync-deployments@5.2
       with:
         switches: -avzr --delete # a:归档, v:详细, z:压缩, r:递归, --delete:删除目标端不存在的文件
-        path: build/ # 本地要同步的目录
+        path: ./build/ # 确认你的构建产物在 build 目录下
         remote_path: /var/www/my-cicd-app/ # 服务器上的目标目录
         remote_host: ${{ secrets.SERVER_HOST }}
         remote_user: ${{ secrets.SERVER_USERNAME }}
